Add custom action definitions and C ABI interface
Define actions with role, verbs, and prepositions:
- Greet: greet, hello
- Farewell: farewell, goodbye

Implement C ABI functions:
- aro_plugin_info(): Returns action metadata as JSON
- aro_plugin_execute(): Dispatches to action implementations
- aro_plugin_free(): Memory cleanup

Actions integrate natively with ARO's verb-based syntax.

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -12,6 +12,17 @@ source:
 provides:
   - type: swift-plugin
     path: Sources/
+    actions:
+      - name: Greet
+        role: own
+        verbs: [greet, hello]
+        prepositions: [with, for]
+        description: Generate a personalized greeting message
+      - name: Farewell
+        role: own
+        verbs: [farewell, goodbye]
+        prepositions: [with, for]
+        description: Generate a farewell message
 
   - type: aro-files
     path: features/
